[project]
name = "TaskTonic"
version = "0.2.0"
authors = [
    { name = "Peter", email = "208develop@gmail.com" },
]
description = """ \
TaskTonic is a Python framework designed to manage application complexity through a unique concurrency model.
It allows you to write highly responsive, concurrent applications (like UIs or IoT controllers) \
without the race conditions and headaches of traditional multi-threading. \
"""

readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/208develop/TaskTonicc"
Issues = "https://github.com/208develop/TaskTonic/issues"
Documentation = "https://github.com/208develop/TaskTonic/tree/master/_documents"

[tool.setuptools.packages.find]
include = ["TaskTonic", "TaskTonic.*"]

[tool.pytest.ini_options]
testpaths = ["testing"]

